# phone-a-friend-mcp

./: .gitignore  README.md  pyproject.toml
src/phone_a_friend/: __init__.py  hub.py  server.py
